--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "jest": "^22.0.4"
+  },
+  "dependencies": {
+    "underscore": "^1.8.3"
   }
 }
