--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "flow": "flow"
   },
   "keywords": [],
   "author": "Aprianto Wiwarsono",
@@ -16,14 +15,9 @@
     "babel-preset-env": "^1.6.1",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
     "jest": "^23.6.0"
   },
-  "dependencies": {
-    "lodash": "^4.17.11",
-    "underscore": "^1.8.3"
-  }
+  "dependencies": {}
 }
